# asctb-tables

./: 404.html  Makefile  README.md  asctb.yaml  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
Anastomoses/: index.html
Biomarkers/: index.html
BiomarkersID/: index.html
BiomarkersLabel/: index.html
BodyPart/: index.html
BodyPartUberon/: index.html
BranchSequence/: index.html
BranchesFrom/: index.html
CellType/: index.html
CellTypeID/: index.html
CellTypeLabel/: index.html
CellTypeLabel_enum/: index.html
CellType_enum/: index.html
CoordX/: index.html
CoordY/: index.html
Example/: index.html
FMA/: index.html
FMALabel/: index.html
ForBranchesSee/: index.html
IsVirtualMergedVessel/: index.html
MergedVessel/: index.html
PathFromHeart/: index.html
Reference/: index.html
ReferenceDOI/: index.html
ReferenceURL/: index.html
Sex/: index.html
Sex_enum/: index.html
UBERON/: index.html
UBERONLabel/: index.html
Vessel/: index.html
VesselClass/: index.html
VesselType/: index.html
VesselType_enum/: index.html
asctb/: asctb.py
asctb/excel/: asctb.xlsx
asctb/jsonld/: asctb.context.jsonld  asctb.jsonld
asctb/jsonschema/: asctb.schema.json
asctb/owl/: asctb.owl.ttl
asctb/prefixmap/: asctb.yaml
asctb/shacl/: asctb.shacl.ttl
asctb/shex/: asctb.shex
data/: vasculature.tsv
search/: search_index.json
types/AnatomicalLabel/: index.html
types/Boolean/: index.html
types/CLIdentifier/: index.html
types/CLLabel/: index.html
types/CellTypeLabel/: index.html
types/CoordinateType/: index.html
(+19 files in other folders)
